--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <title>Snackady Snacks</title>
+        <title>Edward Tulane</title>
         <script src="javascript.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
