--- a/Edward.html
+++ b/Edward.html
@@ -18,7 +18,7 @@
             <div class="underline"></div>
             <br><br><br>
             <center>
-            <h2 style="width:1000px;"  class="text-capitalize">edward tulane is a very recomended book and is a book that always leaves you on a cliff hanger.also in this book edward tulane travels from one person to another slowly starting from not even knowing what love is to when he starts to loving every one that he meets just like how they loved him.like that edwadrd learns the meaning of love and joy.</h2>
+            <h2 class="text-capitalize" style="text-align: center;">Edward Tulane Is A Very Recomended Book And Is A Book That Always Leaves You On A Cliff Hanger.Also In This Book Edward Tulane Travels From One Person To Another Slowly Starting From Not Even Knowing What Love Is To When He Starts To Loving Every One That He Meets Just Like How They Loved Him.Like That Edwadrd Learns The Meaning Of Love And Joy.</h2>
             </center>
             <br><br><br>
             <h1>This Book's Rating</h1>
