--- a/hello.html
+++ b/hello.html
@@ -22,7 +22,7 @@
             <h1>Take the Test and within A Day you sould get your results!!</h1>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyIh4VkoXxYYsBV8yz8Ye1HMg0JfIQWiE8IQ_fHfIp9eNLDg/viewform?embedded=true" width="640" height="672" frameborder="0" marginheight="0" marginwidth="0"></iframe>
             <br><br>
-            <button class="btn btn-primary" onclick="test()" id="hello">Thanks</button>
+            <button class="btn btn-primary" onclick="test()" id="hello">Refresh</button>
         </section>
 
         
