--- a/Edward.html
+++ b/Edward.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <title>Snackady Snacks</title>
+        <title>Edward Tulane Book Report</title>
         <script src="javascript.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,6 +17,7 @@
             <h1 id="header">About Edward Tulane</h1>
             <div class="underline"></div>
             <br><br><br>
+            <h1>Book Report/Summary Type</h1>
             <center>
             <h2 class="text-capitalize" style="text-align: center;">Edward Tulane Is A Very Recomended Book And Is A Book That Always Leaves You On A Cliff Hanger.Also In This Book Edward Tulane Travels From One Person To Another Slowly Starting From Not Even Knowing What Love Is To When He Starts To Loving Every One That He Meets Just Like How They Loved Him.Like That Edwadrd Learns The Meaning Of Love And Joy.</h2>
             </center>
