--- a/character.html
+++ b/character.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <title>Snackady Snacks</title>
+        <title>Edward Tulane Character List</title>
         <script src="javascript.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,7 +15,7 @@
         </head>
 
         <section id="about" style="overflow-x: scroll; overflow:scroll;">
-            <h1 id="header">About Edward Tulane</h1>
+            <h1 id="header">Character List</h1>
             <div class="underline"></div>
             <div id="Mycarousel2" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
