--- a/Edward.html
+++ b/Edward.html
@@ -12,14 +12,28 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        </head>
+        <body>
+            <div id="top"  >
+                <div class="topnav">
+                <a href="index.html" class="active">Home</a>
+                <a href="Edward.html" class="active">About</a>
+                <a href="character.html" class="active">Character List</a>
+                <a href="hello.html" class="active">Test!!</a>
+                    </div>
+            </div> 
         <section id="about" style="overflow-x: scroll; overflow:scroll;">
             <h1 id="header">About Edward Tulane</h1>
             <div class="underline"></div>
             <br><br><br>
             <h1>Book Report/Summary Type</h1>
             <center>
-            <h2 class="text-capitalize" style="text-align: center;">Edward Tulane Is A Very Recomended Book And Is A Book That Always Leaves You On A Cliff Hanger.Also In This Book Edward Tulane Travels From One Person To Another Slowly Starting From Not Even Knowing What Love Is To When He Starts To Loving Every One That He Meets Just Like How They Loved Him.Like That Edwadrd Learns The Meaning Of Love And Joy.</h2>
+            <h2 class="text-capitalize" style="text-align: center;">The Miraculous Journey of Edward Tulane Is A Very
+                Recommended Book And 
+               It Always Leaves You On A CliffHanger. In This Book Edward Tulane
+                Travels From One Person To Another. Starting From Him Not Knowing
+                 What Love Is, To When He Starts To Love Everyone He Meets Just
+                  Like How They Loved Him.Like That Edward Learns The Meaning Of Love And Joy.</h2>
             </center>
             <br><br><br>
             <h1>This Book's Rating</h1>
