--- a/character.html
+++ b/character.html
@@ -13,7 +13,16 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         </head>
+        <body>
+            <div id="top"  >
+                <div class="topnav">
+                <a href="index.html" class="active">Home</a>
+                <a href="Edward.html" class="active">About</a>
+                <a href="character.html" class="active">Character List</a>
+                <a href="hello.html" class="active">Test!!</a>
 
+                </div>
+            </div> 
         <section id="about" style="overflow-x: scroll; overflow:scroll;">
             <h1 id="header">Character List</h1>
             <div class="underline"></div>
